--- a/.github/workflows/ci_create_tag.yaml
+++ b/.github/workflows/ci_create_tag.yaml
@@ -13,18 +13,19 @@ jobs:
       - name: Git Bump Version
         shell: bash
         env:
-          GIT_CREDS: ${{secrets.GIT_TOKEN}}
+          GITHUB_TOKEN: ${{secrets.GIT_TOKEN}}
         run: |
           env
           # set -x
-
-          # export git_creds_filepath="$HOME/.git-credentials"
-          # echo "$GIT_CREDS" > "$git_creds_filepath"
-          # git config --global credential.helper 'store --file='"$git_creds_filepath"''
-          # git config --unset-all http.https://github.com/.extraheader #https://stackoverflow.com/a/69979203
-          # git config --global user.email "ci_user@git.com"
-          # git config --global user.name "CI"
-          # export CURRENT_LATEST_TAG=$(git tag | sort --version-sort | tail -n 1)
-          # export FUTURE_LATEST_TAG=$(echo $CURRENT_LATEST_TAG | awk 'BEGIN{FS=OFS="."} {$2+=1} 1')
+          REPO_URL_AUTH_URL=
+          export GIT_CREDS_FILEPATH="$HOME/.git-credentials"
+          echo "https://ci:${GITHUB_TOKEN}@https://github.com" > "$GIT_CREDS_FILEPATH"
+          git config --global credential.helper 'store --file='"$GIT_CREDS_FILEPATH"''
+          git config --unset-all http.https://github.com/.extraheader #https://stackoverflow.com/a/69979203
+          git config --global user.email "ci_user@git.com"
+          git config --global user.name "CI"
+          set -x
+          export CURRENT_LATEST_TAG=$(git tag | sort --version-sort | tail -n 1)
+          export FUTURE_LATEST_TAG=$(echo $CURRENT_LATEST_TAG | awk 'BEGIN{FS=OFS="."} {$2+=1} 1')
           # git tag -a -m "Version $tag" "$tag"
           # git push origin "$tag"
