--- a/.github/workflows/create_tag.yaml
+++ b/.github/workflows/create_tag.yaml
@@ -1,4 +1,4 @@
-name: ci_create_tag
+name: create_tag
 
 on:
   push:
@@ -13,11 +13,11 @@ jobs:
       - name: Git Bump Version
         shell: bash
         env:
-          GITHUB_TOKEN: ${{secrets.GIT_TOKEN}}
+          GITHUB_CUSTOM_TOKEN: ${{secrets.GIT_TOKEN}}
         run: |
           set -x
           export GIT_CREDS_FILEPATH="$HOME/.git-credentials"
-          echo "https://ci:${GITHUB_TOKEN}@https://github.com" > "$GIT_CREDS_FILEPATH"
+          echo "https://ci:${GITHUB_CUSTOM_TOKEN}@https://github.com" > "$GIT_CREDS_FILEPATH"
           git config --global credential.helper 'store --file='"$GIT_CREDS_FILEPATH"''
           git config --unset-all http.https://github.com/.extraheader #https://stackoverflow.com/a/69979203
           git config --global user.email "ci_user@git.com"
