--- a/.github/workflows/build_tag.yaml
+++ b/.github/workflows/build_tag.yaml
@@ -1,33 +1,41 @@
-name: ci_tag_build
+name: build_tag
 
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+      - '[0-9]+.[0-9]+.[0-9]+'
+
+env:
+  TAG: ${{github.ref_name}}
 
 jobs:
   build:
     runs-on: ubuntu-22.04
-
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Lint Helm Chart
-        run: helm lint ./charts/podinfo/
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
 
-      - name: Chart | Push
-        uses: appany/helm-oci-chart-releaser@v0.3.0
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to container registry
+        uses: docker/login-action@v2
         with:
-          name: podinfo
-          repository: flux-fleet
-          tag: ${{github.ref_name}}
-          path: ./charts/podinfo/
-          registry: ghcr.io/pmarchenko-coca-cola
-          registry_username: ${{ secrets.REGISTRY_USERNAME }}
-          registry_password: ${{ secrets.REGISTRY_PASSWORD }}
-          update_dependencies: 'true'
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_TOKEN }}
+          registry: quay.io
 
+      - name: Build and Push Image
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          platforms: linux/amd64,linux/arm64
+          tags: |
+            elopsod/grpc-echo-server:${TAG}
+            elopsod/grpc-echo-server:latest
 
 
 
