--- a/.github/workflows/create_tag.yaml
+++ b/.github/workflows/create_tag.yaml
@@ -16,6 +16,7 @@ jobs:
       - name: Bump Version
         shell: bash
         run: |
+          env
           set -x
           export GIT_CREDS_FILEPATH="$HOME/.git-credentials"
           echo "https://${GITHUB_REPOSITORY_OWNER}:${GITHUB_CUSTOM_TOKEN}@https://github.com" > "$GIT_CREDS_FILEPATH"
