--- a/.github/workflows/create_tag.yaml
+++ b/.github/workflows/create_tag.yaml
@@ -19,7 +19,7 @@ jobs:
           env
           set -x
           export GIT_CREDS_FILEPATH="$HOME/.git-credentials"
-          echo "https://${GITHUB_REPOSITORY_OWNER}:${GITHUB_CUSTOM_TOKEN}@https://github.com/${GITHUB_REPOSITORY}" > "$GIT_CREDS_FILEPATH"
+          echo "https://${GITHUB_REPOSITORY_OWNER}:${GITHUB_CUSTOM_TOKEN}@https://github.com" > "$GIT_CREDS_FILEPATH"
           git config --global credential.helper 'store --file='"$GIT_CREDS_FILEPATH"''
           git config --unset-all http.https://github.com/.extraheader     #https://stackoverflow.com/a/69979203
           git config --global user.email "ci_user@git.com"
@@ -27,6 +27,7 @@ jobs:
           git fetch --prune --tags
           export CURRENT_LATEST_TAG=$(git tag | sort --version-sort | tail -n 1)
           export FUTURE_LATEST_TAG=$(echo $CURRENT_LATEST_TAG | awk 'BEGIN{FS=OFS="."} {$2+=1} 1')
+          git --version
           git tag -m "CI bump $FUTURE_LATEST_TAG" "$FUTURE_LATEST_TAG" #https://github.com/orgs/community/discussions/27028#discussioncomment-3254360
           git remote -v
           git push origin "$FUTURE_LATEST_TAG"
