--- a/.github/workflows/create_tag.yaml
+++ b/.github/workflows/create_tag.yaml
@@ -6,11 +6,12 @@ on:
       - test #main
 
 env:
-  GITHUB_CUSTOM_TOKEN: "dd" #${{secrets.GIT_TOKEN}}
+  GITHUB_CUSTOM_TOKEN: ${{secrets.GIT_TOKEN}}
 
 jobs:
   tag:
     runs-on: ubuntu-22.04
+    environment: CI
     steps:
       - uses: actions/checkout@v4
       - name: Bump Version
