--- a/.github/workflows/build_tag.yaml
+++ b/.github/workflows/build_tag.yaml
@@ -5,9 +5,6 @@ on:
     tags:
       - '[0-9]+.[0-9]+.[0-9]+'
 
-env:
-  TAG: ${{github.ref_name}}
-
 jobs:
   build:
     runs-on: ubuntu-22.04
@@ -34,7 +31,7 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            elopsod/grpc-echo-server:${TAG}
+            elopsod/grpc-echo-server:${{github.ref_name}}
             elopsod/grpc-echo-server:latest
 
 
